[package]
name = "pack_files"
version = "0.0.0"
authors = ["soeur <juzi201314@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"

walkdir = "2.3.2"
